<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/cardLight"
    app:contentPadding="@dimen/spacing_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_xlarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                style="@style/textHead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/img_icon_small"
                android:layout_weight="1"
                android:gravity="bottom" />

            <ImageView
                android:id="@+id/menu"
                style="@style/imgIconMenu"
                android:background="@drawable/btn_tr_grey_border"
                android:contentDescription="@string/iv_icon"
                android:src="@drawable/ic_more_vert_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:orientation="horizontal">

            <TextView
                style="@style/textEntryHorizontalHead"
                android:text="@string/store_address" />

            <TextView
                android:id="@+id/address"
                style="@style/textEntryHorizontal" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:orientation="horizontal">

            <TextView
                style="@style/textEntryHorizontalHead"
                android:text="@string/store_open" />

            <TextView
                android:id="@+id/hours"
                style="@style/textEntryHorizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textEntryHorizontalHead"
                android:text="@string/store_phone" />

            <TextView
                android:id="@+id/phone"
                style="@style/textEntryHorizontal" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

