<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.martiply.android.view.SquareImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="@string/trans_gallery_img"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:typeface="sans" />

            <TextView
                android:id="@+id/store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_dk2"
                android:typeface="sans"
                />

            <!-- Apparel -->
            <View
                android:id="@+id/apparel_divider"
                style="@style/dividerDark"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_gender_head"
                style="@style/entryTitleTop"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:text="@string/item_apparel_gender"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_age_head"
                style="@style/entryTitleTop"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/item_apparel_age"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_size_head"
                style="@style/entryTitleTop"
                android:layout_marginTop="@dimen/spacing_medium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />


            <TextView
                android:id="@+id/apparel_color_head"
                style="@style/entryTitleTop"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/item_apparel_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_material_head"
                style="@style/entryTitleTop"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/item_apparel_material"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_feature_head"
                style="@style/entryTitleTop"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/feature"
                android:visibility="gone" />

            <TextView
                android:id="@+id/apparel_feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />

            <!-- end of apparel -->

            <View
                android:id="@+id/description_head"
                style="@style/dividerDark"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:visibility="gone" />

            <TextView
                android:id="@+id/description"
                style="@style/bodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:typeface="sans"
                android:visibility="gone" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Your FAB implementation -->
        <com.martiply.android.view.MyFab
            android:id="@+id/fab"
            style="@style/fabMenu"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!-- Overlay that dims the screen -->
        <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Circular reveal container for the sheet -->
        <io.codetail.widget.RevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <!-- Sheet that contains your items -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fab_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item_menu_search_similar"
                        style="@style/rowMenuPopup"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/item_menu_findSimilar" />

                    <View
                        style="@style/dividerLight"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/item_menu_to_store"
                        style="@style/rowMenuPopup"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/item_menu_toStore" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </io.codetail.widget.RevealLinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>